[package]
name = "lesswrong-sequences-highlights-epub"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
handlebars = "4.5"
epub-builder = "0.7"
markdown = "1.0.0-alpha.22"
chrono = "0.4.39"
openai = { git = "https://github.com/MrToph/openai.git", branch = "master" }
dotenv = "0.15.0"
lol_html = "2.2.0"
regex = "1.10"
lesswrong-api = { git = "https://github.com/MrToph/lesswrong-api.git", version = "0.1.0" }
